# rust-playground

./: .clinerules  .gitignore  .windsurfrules  README.md  package-lock.json  rust-playground.code-workspace
.cargo/: config.toml
aws/aws-sdk/: Cargo.toml
axum/axum-new/: Cargo.toml
axum/axum-playground/: Cargo.toml
axum/axum-playground/src/: main.rs
axum/axum-playground/src/router/: hello.rs  mod.rs  posts.rs  users.rs
axum/axum-playground/src/router/comments/: comments.rs
axum/axum-playground/src/router/posts/: posts.rs  posts_error.rs  posts_type.rs
axum/axum-playground/src/router/users/: users_service.rs
axum/axum-playground/thunder-tests/: thunderActivity.json
basic/collections/: Cargo.toml
blog_example/: Cargo.toml  readme.md
blog_example/.sqlx/: query-00658c59f610f938aa655c071f36271c566dc4f55a3741d9b5612597ac680391.json  query-06e7c20c0314445019663c0abc7a6a16683d959ecb49614fbb41f27efea1e4f9.json  query-0a5cfeee15d41d759c1addbab6d99575b83c35449ab25a0a20be43a753547725.json  query-3962c6ec3f2b7a841cd96b2fcc6cd54d34467de3304fbd00d9f4761781f8e2eb.json  query-5736f2aabbe820fc23d1e2fa2579287cdd1fef2b3f2469d3a2e25f764bd1e488.json  query-619b928874bc9e21721fe17015a96fa1b42ada7f8f0db35ae26aa600bc2bcfde.json  query-75d59f661dfc4d84d15882f903c13325827566ddc5e852842c9c849d88393320.json  query-85b8532228ff3339a01fd343014f6500b40737aaec4717d06fff03867abafe10.json  query-a07287224bed95ef0a32ca3bae593583b414c9818dbf269f4ad7541eef329705.json  query-b72386cf0cce156772d4bb0ee5963eb61542beec3a069cc8bbaae9770226a944.json  query-bf0987ff8481848e452eff20d5180895af169ebed45a9e5e99da6009297994c2.json  query-c46392e7fc3e46944c21b66eaf2149f7dfe63c0d64c17d166b38f8a175729b24.json  query-e48c4f28a912157f41ce0b7dd2ad2546075befabe9d10b24fdcd6592fba61f2b.json
blog_example/migrations/: 20250223104607_create_users_table.sql
blog_example/src/: health.rs  lib.rs  main.rs  response.rs
blog_example/src/config/: env_config.rs  mod.rs
blog_example/src/config/api_config/: error.rs  mod.rs  response.rs
blog_example/src/routes/: health_routes.rs  mod.rs  post_routes.rs  todo_routes.rs  user_routes.rs
blog_example/src/service/post/: mod.rs  post_model.rs  post_service.rs
blog_example/src/service/todo/: mod.rs  todo_model.rs  todo_service.rs
blog_example/src/service/user/: mod.rs  user_model.rs  user_service.rs
control-flow/: Cargo.toml
dioxus_playground/: .gitignore  Cargo.toml  Dioxus.toml  README.md  dockerfile  dogs.txt  hotdog.db
dioxus_playground/src/: lib.rs  main.rs  route.rs
dioxus_playground/src/components/: dog.rs  favorites.rs  mod.rs  navbar.rs
dioxus_playground/src/config/: db_server.rs  mod.rs
dioxus_playground/src/dogs/: dog_server.rs  dog_view.rs  favorites_server.rs  favorites_view.rs  favorites_with_spspend_view.rs  mod.rs
dioxus_playground/src/models/: dog.rs
dioxus_playground/src/routes/: dog.rs  dog_server.rs  favorites.rs  favorites_server.rs  favorites_with_spspend.rs  mod.rs  root.rs
guess-game/: Cargo.toml
lambda_function/: Cargo.toml  README.md
ownership/: Cargo.toml
rust_example/: Cargo.toml
structs/: Cargo.toml
varsMutability/: Cargo.toml
web/hello-actix/: Cargo.toml
web/hello-actix/node/: app.ts
web/hello-actix/src/: main.rs
web/hello-actix/src/routes/: mod.rs  user.router.rs
web/hello-actix/tls/: cert.pem  key.pem
web/tower-middleware/: Cargo.toml
web/tower-middleware/src/: main.rs
(+124 files in other folders)
