[package]
name = "blog_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
once_cell = "1.19"
thiserror = "1.0"
config = "0.14"
garde = { version = "0.16", features = ["derive"] }
