[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"]}
reqwest = {version = "0.11.14", features = ["json"]}
anyhow = "1.0.69"
tower-http = {  version = "0.4.0", features = ['full']}
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
