[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", features = ["openssl"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10" }