[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# tower = { version = "0.4", features = ["full"] }
# tokio = { version = "1", features = ["full"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]